experimental/parser/testdata/parser/package/eof_after_kw.proto.stderr.txt
error: missing path in `package` declaration
  --> testdata/parser/package/eof_after_kw.proto:3:1
   |
 3 | package
   | ^^^^^^^
   = help: to place a file in the unnamed package, omit the `package`
           declaration; however, using the unnamed package is discouraged

error: unexpected end-of-file in `package` declaration
  --> testdata/parser/package/eof_after_kw.proto:3:8
   |
 3 | package
   |        ^

encountered 2 errors
